seperate details text into a new p element to avoid assigning text alignment

--- a/public/css/audio-list-public.css
+++ b/public/css/audio-list-public.css
@@ -4,11 +4,10 @@
  */
 
 ul.audio-list summary.underline-pointer {
-  text-decoration: underline !important;
-  cursor: pointer !important;
-  text-align: center !important;
+  text-decoration: underline;
+  cursor: pointer;
 }
 
-ul.audio-list details.align-left {
-  text-align: left !important;
+ul.audio-list {
+  list-style-type: none;
 }
